[B]Version 1.1.69[/B]
chaturbate - fix listing
missav - fix pagination