@@ -314,7 +314,11 @@ def addDir(name, url, mode, iconimage=None, page=None, channel=None, section=Non
         keyw = (sys.argv[0]
                 + "?mode=" + str('utils.delKeyword')
                 + "&keyword=" + urllib_parse.quote_plus(keyword))
+        keywedit = (sys.argv[0]
+                    + "?mode=" + str('utils.newSearch')
+                    + "&keyword=" + urllib_parse.quote_plus(keyword))
         contextMenuItems.append(('[COLOR hotpink]Remove keyword[/COLOR]', 'RunPlugin(' + keyw + ')'))
+        contextMenuItems.append(('[COLOR hotpink]Edit keyword[/COLOR]', 'RunPlugin(' + keywedit + ')'))
     if list_avail:
         list_item_name = 'Add item to ...'
         list_url = (sys.argv[0]
