@@ -1,3 +1,4 @@
 [B]Version 1.1.69[/B]
 chaturbate - fix listing
 missav - fix pagination
+search - added "Edit keyword" to context menu
